--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,6 @@ dist
 .svelte-kit
 
 # End of https://www.toptal.com/developers/gitignore/api/
+src/utils/ApiError.js
+src/utils/ApiResponse.js
+src/utils/asyncHandlers.js
